--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <p>Name: Keming Jiao (焦柯鸣)</p>
+<p>Address: 800 Dongchuan Road, Shanghai, China</p>
+<p>Phone number: (+86)15834075118</p>
+<p>E-mail: 15834075118 [at] sjtu.edu.cn</p>
