--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <p style="text-align:center">
                 <a href="mailto:15834075118@sjtu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="CV_KemingJiao_2303.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://github.com/JiaoKM">GitHub</a> &nbsp/&nbsp
+                <a href="https://github.com/JiaoKM">GitHub</a>
 <!--                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp -->
 <!--                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a>  --><!-- &nbsp/&nbsp -->
 <!--                 <a href="https://twitter.com/jon_barron">Twitter</a> -->
