--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/KemingJiao.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/KemingJiao.jpg" class="hoverZoomLink"></a>
+              <a href="image/KemingJiao.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="image/KemingJiao.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
