--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Keming Jiao 「焦柯鸣」</name>
               </p>
-              <p>I am an undergraduate student at <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. 
+              <p>I am an undergraduate student at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. 
               </p>
               <p>I have been working as a research intern at <a href="http://apex.sjtu.edu.cn"> APEX Lab</a> since 2019, advised by <a href="http://wnzhang.net"> Prof. Weinan Zhang</a>. I am now a visiting student at <a href="http://icontrol.ri.cmu.edu/"> Intelligent Control Lab</a> in the Robotics Institute at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, advised by <a href="https://www.cs.cmu.edu/~cliu6/"> Prof. Changliu Liu</a>. Prior to that, I was research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/"> Microsoft Research</a>.
               </p>
