--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
             </td>
           </tr>
         </tbody></table>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px">
+                <p font-size:small;="">
+                    <br>
+                    <br>
+                    </p><div style="float:left;">
+                        Updated at Apr. 2023
+                    </div>
+                    <div style="float:right;">
+                        Thanks <a href="https://jonbarron.info">Jon Barron</a> for sharing this marvelous template.
+                    </div>
+                    <br>
+                    <br>        
+                <p></p>                           
+            </td>
+          </tr>
+        </tbody></table>
       </td>
     </tr>
   </table>
