--- a/index.html
+++ b/index.html
@@ -51,6 +51,33 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Experiences</heading>
+            </td>
+          </tr>
+          <tr>
+        </tbody></table>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
+              <a href="https://www.imperial.ac.uk/continuing-professional-development/short-courses/summer-schools/winterschool/imperial-data-science-online-winter-school/">
+                <title>Imperial Data Science Winter School 2023</title>
+              </a>
+              <br>
+              <em>16th January - 8th February</em>, &nbsp;2023&nbsp;
+              <br>
+              <a href="https://github.com/JiaoKM/NLP_CORD19">Code</a>
+<!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
+              <br>
+              <font color='gray'>In the winter school, every group should complete a CV and a NLP project. I mainly participated in the NLP project. In the natural language processing project, I extract titles, abstracts and articles from The COVID-19 Open Research Dataset (CORD-19) and mine data and knowledge from these words. There are 4 steps to complete this project: Scan all JSON files in the given dataset and extract texts from relevant parts; Use different tokenizers to traverse the extracted texts and segment the texts into words; Use different models to build word representations for each word; Display the knowledge and data mined from the word representations through various methods.</font>
+<!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
+            </td>
+          </tr>
+        </tbody></table>
+        
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Education</heading>
             </td>
           </tr>
