--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <tr>
             <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
               <a href="https://www.imperial.ac.uk/continuing-professional-development/short-courses/summer-schools/winterschool/imperial-data-science-online-winter-school/">
-                <title>Imperial Data Science Winter School 2023</title>
+                <papertitle>Imperial Data Science Winter School 2023</papertitle>
               </a>
               <br>
               <em>16th January - 8th February</em>, &nbsp;2023&nbsp;
