--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Research</heading>
+            </td>
+          </tr>
+          <tr>
+        </tbody></table>
+        
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Experiences</heading>
             </td>
           </tr>
