--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
           </tr>
         </tbody></table>
         
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
+              <papertitle>Teacher Assitant of C++ Programming Course</papertitle>
+              <br>
+              <em>Fall Semester</em>, &nbsp;2021 & 2022&nbsp;
+              <br>
+              <a href="https://github.com/JiaoKM/Edge_Detect_Qt">Code</a>
+<!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
+              <br>
+              <font color='gray'>In the past two fall semesters, I worked as a teacher assistant in the C++ programming course (CS1501). I helped the teacher check the homework and answer questions from students. I also participated in the design of course project about image edge detecting and the source code of the demo is showed here.</font>
+<!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
+            </td>
+          </tr>
+        </tbody></table>
+        
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
