--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
           </tr>
         </tbody></table>
         
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
+              <papertitle>Raspberry Pi Camera with Ink Screen</papertitle>
+              <br>
+              <em>July</em>, &nbsp;2021&nbsp;
+              <br>
+              <a href="https://www.bilibili.com/video/BV1Ew411d7Wh/?spm_id_from=333.999.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434">Video</a>
+<!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
+              <br>
+              <font color='gray'>Out of personal interest, as a continuation of the course Introduction to Engineering (ME1221), I made a camera by using a Raspberry Pi and a black, white and red ink screen. At the same time, I also combined the shell with Lego blocks. We can use this camera to take photos with special effects. Although the source code has been lost, the video survives.</font>
+<!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
+            </td>
+          </tr>
+        </tbody></table>
+        
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
