--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p>I am an undergraduate student at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. 
               </p>
-              <p>In my student ID card, I am an engineering student. In my mind, I want to be a history researcher. But in my heart, I am just a gamer exploring the world.
+              <p>In my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
               </p>
 <!--               <p style="text-align:center"><font color="red"><em><strong>I will apply for PhD programs starting in 2023 Fall.</strong></em></font>
               </p> -->
@@ -55,6 +55,20 @@
             </td>
           </tr>
           <tr>
+        </tbody></table>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
+              <papertitle>Domain adaptation in fault diagnosis of roller bearing</papertitle>
+              <br>
+              <em>October</em>, &nbsp;2022&nbsp; - <em>present</em>
+<!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
+              <br>
+              <font color='gray'>With the great development of AI technology, the application of deep learning has brought too many realms to a new era. Fault diagnosis is one of them. But there still exists some challenges, such as domain-shift, which prevents one effective method to apply on different working situations. There are two mainstream methods. One is difference measurement and another is adversarial training. We choose the latter one as the methodology to solve the domain-shift problem on our different rotating speed 3-dimension data. Now we've got it working and got nice results. Our work continues.</font>
+<!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
+            </td>
+          </tr>
         </tbody></table>
         
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
