--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p>I am an undergraduate student at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. 
               </p>
-              <p>In my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
+              <p>On my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
               </p>
 <!--               <p style="text-align:center"><font color="red"><em><strong>I will apply for PhD programs starting in 2023 Fall.</strong></em></font>
               </p> -->
@@ -35,7 +35,7 @@
               </p> -->
               <p style="text-align:center">
                 <a href="mailto:15834075118@sjtu.edu.cn">Email</a> &nbsp/&nbsp
-                <a href="CV_KemingJiao_2303.pdf">CV</a> &nbsp/&nbsp
+                <a href="CV_KemingJiao_2305.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/JiaoKM">GitHub</a>
 <!--                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp -->
 <!--                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a>  --><!-- &nbsp/&nbsp -->
@@ -65,7 +65,7 @@
               <em>October</em>, &nbsp;2022&nbsp; - <em>present</em>
 <!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
               <br>
-              <font color='gray'>With the great development of AI technology, the application of deep learning has brought too many realms to a new era. Fault diagnosis is one of them. But there still exists some challenges, such as domain-shift, which prevents one effective method to apply on different working situations. There are two mainstream methods. One is difference measurement and another is adversarial training. We choose the latter one as the methodology to solve the domain-shift problem on our different rotating speed 3-dimension data. Now we've got it working and got nice results. Our work continues.</font>
+              <font color='gray'>With the great development of AI technology, the application of deep learning has brought too many realms to a new era. Fault diagnosis is one of them. But there still exists some challenges, such as domain-shift, which prevents one effective method to apply on different working situations. There are two mainstream methods. One is difference measurement and another is adversarial training. We choose the latter one as the methodology to solve the domain-shift. We proposed a novel dual-stream multi-channel neural network based on adversarial learning, and evaluated the effectiveness of it on the fault datasets of roller state under different rotational speed conditions. Our work continues.</font>
 <!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
             </td>
           </tr>
@@ -92,7 +92,7 @@
               <a href="https://github.com/JiaoKM/NLP_CORD19">Code</a>
 <!--               &nbsp;/&nbsp;<a href="https://github.com/apexrl/EBIL-torch">Code</a> -->
               <br>
-              <font color='gray'>In the winter school, every group should complete a CV and a NLP project. I mainly participated in the NLP project. In the natural language processing project, I extract titles, abstracts and articles from The COVID-19 Open Research Dataset (CORD-19) and mine data and knowledge from these words. There are 4 steps to complete this project: Scan all JSON files in the given dataset and extract texts from relevant parts; Use different tokenizers to traverse the extracted texts and segment the texts into words; Use different models to build word representations for each word; Display the knowledge and data mined from the word representations through various methods.</font>
+              <font color='gray'>In the winter school, every group should completed a CV and a NLP project. I mainly participated in the NLP project. In the natural language processing project, I extracted titles, abstracts and articles from the COVID-19 Open Research Dataset (CORD-19) and mined data and knowledge from these words. There were 4 steps to complete this project: Scan all JSON files in the given dataset and extract texts from relevant parts; Use different tokenizers to traverse the extracted texts and segment the texts into words; Use different models to build word representations for each word; Display the knowledge and data mined from the word representations through various methods.</font>
 <!--               <p>This paper subsumes our CVPR 2014 paper.</p> -->
             </td>
           </tr>
