--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:100%;vertical-align:middle">
-              <papertitle>Teacher Assitant of C++ Programming Course</papertitle>
+              <papertitle>Teaching Assitant of C++ Programming Course</papertitle>
               <br>
               <em>Fall Semester</em>, &nbsp;2021 & 2022&nbsp;
               <br>
