--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <p style="text-align:center">
                 <a href="mailto:15834075118@sjtu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="CV_KemingJiao_2305.pdf">CV</a> &nbsp/&nbsp
+                 <a href="https://space.bilibili.com/25704273?spm_id_from=444.41.0.0">Bilibili</a> &nbsp/&nbsp
                 <a href="https://github.com/JiaoKM">GitHub</a>
 <!--                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp -->
 <!--                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a>  --><!-- &nbsp/&nbsp -->
