--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--   <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
 </head>
+
+<head>
+<style>
+  .center-img {
+    text-align: center;
+  }
+</style>
+</head>
   
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -34,7 +42,8 @@
                   I'm looking for summer research opportunities in 2021!
               </p> -->
               <p style="text-align:center">
-                <a href="mailto:15834075118@sjtu.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="mailto:keming.jiao.6688@student.lu.se">Email</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com.hk/citations?user=8547_fAAAAAJ&hl=zh-CN">Scholar</a> &nbsp/&nbsp
                 <a href="CV_KemingJiao_2305.pdf">CV</a> &nbsp/&nbsp
                  <a href="https://space.bilibili.com/25704273?spm_id_from=444.41.0.0">Bilibili</a> &nbsp/&nbsp
                 <a href="https://github.com/JiaoKM">GitHub</a>
@@ -48,6 +57,10 @@
             </td>
           </tr>
         </tbody></table>
+
+        <div class="center-img">
+          <img src="https://github.com/JiaoKM/Jelly_Water_Tetris/blob/master/image/video.gif" alt="Shown">
+        </div>
         
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
