--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </tbody></table>
 
         <div class="center-img">
-          <img src="https://github.com/JiaoKM/Jelly_Water_Tetris/blob/master/image/video.gif" alt="Shown">
+          <img src="image/video.gif" alt="Shown">
         </div>
         
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
