--- a/index.html
+++ b/index.html
@@ -152,13 +152,25 @@
           </tr>
           <tr>
         </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
+              <b>Lund University</b>, Lund, Sweden
+              <br>
+              MSc in Virtual Reality and Augmented Reality • Sep. 2024 to Jun. 2026 (expected)
+              </br>
+            </td>
+            <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="image/lund_logo.png" width="75" height="75"></td>
+          </tr>
+        </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
               <b>Shanghai Jiao Tong University</b>, Shanghai, China
               <br>
-              B.E. in Electronic Science and Technology • Sep. 2020 to present
+              B.E. in Electronic Science and Technology • Sep. 2020 to Jun. 2024
               </br>
             </td>
             <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="image/SJTU_logo.png" width="75" height="75"></td>
@@ -172,7 +184,7 @@
                     <br>
                     <br>
                     </p><div style="float:left;">
-                        Updated at Apr. 2023
+                        Updated at Aug. 2024
                     </div>
                     <div style="float:right;">
                         Thanks <a href="https://jonbarron.info">Jon Barron</a> for sharing this marvelous template.
