--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--   <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
 </head>
-
-<head>
-<style>
-  .center-img {
-    text-align: center;
-  }
-</style>
-</head>
   
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -28,7 +20,10 @@
               <p style="text-align:center">
                 <name>Keming Jiao 「焦柯鸣」</name>
               </p>
-              <p>I am an undergraduate student at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. 
+              <p>
+                I'm looking for summer internship opportunities in 2025!
+              </p>
+              <p>I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>. Before that, I got my bachelor's degree at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
               </p>
               <p>On my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
               </p>
@@ -44,7 +39,7 @@
               <p style="text-align:center">
                 <a href="mailto:keming.jiao.6688@student.lu.se">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?user=8547_fAAAAAJ&hl=zh-CN">Scholar</a> &nbsp/&nbsp
-                <a href="CV_KemingJiao_2305.pdf">CV</a> &nbsp/&nbsp
+                <a href="CV/CV_2406.pdf">CV</a> &nbsp/&nbsp
                  <a href="https://space.bilibili.com/25704273?spm_id_from=444.41.0.0">Bilibili</a> &nbsp/&nbsp
                 <a href="https://github.com/JiaoKM">GitHub</a>
 <!--                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp -->
@@ -69,6 +64,18 @@
             </td>
           </tr>
           <tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:65%;vertical-align:middle">
+              Multi-stream domain adversarial prototype network for integrated smart roller TBM main bearing fault diagnosis across various low rotating speeds
+              <br>
+              Xingchen Fu, <b>Keming Jiao</b>, Jianfeng Tao, Chengliang Liu. <i>Reliability Engineering & System Safety p. 110284. Elsevier, 2024</i>
+              </br>
+            </td>
+            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/SJTU_logo.png" width="75" height="75"></td>
+          </tr>
         </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
