--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
               Xingchen Fu, <b>Keming Jiao</b>, Jianfeng Tao, Chengliang Liu. <i>Reliability Engineering & System Safety p. 110284. Elsevier, 2024</i>
               </br>
             </td>
-            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/SJTU_logo.png" width="75" height="75"></td>
+            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="75" height="75"></td>
           </tr>
-        </tbody></table>
+        </tbody></table>MDAPN
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
