--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </td>
             <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="75" height="75"></td>
           </tr>
-        </tbody></table>MDAPN
+        </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
