--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--   <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
 </head>
-  
+
+<head>
+  <style>
+    .center-img {
+      text-align: center;
+    }
+  </style>
+  </head>
+
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
@@ -74,7 +82,7 @@
               Xingchen Fu, <b>Keming Jiao</b>, Jianfeng Tao, Chengliang Liu. <i>Reliability Engineering & System Safety p. 110284. Elsevier, 2024</i>
               </br>
             </td>
-            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="75" height="75"></td>
+            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="150" height="150"></td>
           </tr>
         </tbody></table>
         
