--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
+            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="200" height="150"></td>
             <td style="padding:0px 20px 20px 20px;width:65%;vertical-align:middle">
-              <p>Multi-stream domain adversarial prototype network for integrated smart roller TBM main bearing fault diagnosis across various low rotating speeds
-              </p>
+              <papertitle>Multi-stream domain adversarial prototype network for integrated smart roller TBM main bearing fault diagnosis across various low rotating speeds
+              </papertitle>
                 <br>
               Xingchen Fu, <b>Keming Jiao</b>, Jianfeng Tao, Chengliang Liu. <i>Reliability Engineering & System Safety p. 110284. Elsevier, 2024</i>
               </br>
             </td>
-            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/MDAPN.png" width="200" height="150"></td>
           </tr>
         </tbody></table>
         
