--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </tbody></table>
 
         <div class="center-img">
-          <img src="image/video.gif" alt="Shown">
+          <img src="image/video.gif" alt="Shown" width="250px">
         </div>
         
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
@@ -76,7 +76,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
-            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/AMFS.png" width="150" height="150"></td>
+            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/AMFS.png" width="200" height="150"></td>
             <td style="padding:0px 20px 20px 20px;width:70%;vertical-align:middle">
               <papertitle>Enhanced Anomaly Detection using Spatial-Alignment and Multi-scale Fusion
               </papertitle>
@@ -111,8 +111,8 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
-            <td style="padding:0px 20px 0px 20px;width:30%;vertical-align:middle"><img src="image/camera.png" width="150" height="150"></td>
-            <td style="padding:0px 20px 20px 20px;width:70%;vertical-align:middle">
+            <td style="padding:0px 20px 0px 20px;width:20%;vertical-align:middle"><img src="image/camera.png" width="150" height="150"></td>
+            <td style="padding:0px 20px 20px 20px;width:80%;vertical-align:middle">
               <papertitle>Raspberry Pi Camera with Ink Screen</papertitle>
               <br>
               <em>July</em>, &nbsp;2021&nbsp;
