--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p>
                 I'm looking for summer internship opportunities in 2025!
               </p>
-              <p>I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>. Before that, I got my bachelor's degree at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
+              <p>I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://www.seiee.sjtu.edu.cn/"> School of Electronic Information & Electricla Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
               </p>
               <p>On my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
               </p>
@@ -107,6 +107,36 @@
             </td>
           </tr>
           <tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 0px 20px;width:20%;vertical-align:middle"><img src="image/240724version.png" width="200" height="150"></td>
+            <td style="padding:0px 20px 20px 20px;width:80%;vertical-align:middle">
+              <papertitle>CPU Renderer</papertitle>
+              <br>
+              <em>July</em>, &nbsp;2024&nbsp;
+              <br>
+              <a href="https://github.com/JiaoKM/Beginner_Renderer_JKodak">Code</a>
+              <br>
+              <font color='gray'>A simple CPU renderer created using Qt Creator. Development continues.</font>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 0px 20px;width:20%;vertical-align:middle"><img src="image/VRgame.png" width="150" height="150"></td>
+            <td style="padding:0px 20px 20px 20px;width:80%;vertical-align:middle">
+              <papertitle> Slay the Spire VR version</papertitle>
+              <br>
+              <em>May</em>, &nbsp;2024&nbsp;
+              <br>
+              <a href="https://www.bilibili.com/video/BV1EZ421s7Z4/?spm_id_from=333.999.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434">Video</a>
+              <br>
+              <font color='gray'>A simple VR version of famous game Slay the Spire. It can be played on PICO4 headset.</font>
+            </td>
+          </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -211,7 +241,7 @@
                         Updated at Aug. 2024
                     </div>
                     <div style="float:right;">
-                        Thanks <a href="https://jonbarron.info">Jon Barron</a> for sharing this marvelous template.
+                        Thanks <a href="https://jonbarron.info">Jon Barron</a> for sharing this marvelous template. Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>.
                     </div>
                     <br>
                     <br>        
