--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <a href="https://scholar.google.com.hk/citations?user=8547_fAAAAAJ&hl=zh-CN">Scholar</a> &nbsp/&nbsp
                 <a href="CV/CV_2406.pdf">CV</a> &nbsp/&nbsp
                  <a href="https://space.bilibili.com/25704273?spm_id_from=444.41.0.0">Bilibili</a> &nbsp/&nbsp
+                 <a href="https://www.linkedin.com/in/keming-jiao-323bba300/?trk=opento_sprofile_details">Linkedin</a> &nbsp/&nbsp
                 <a href="https://github.com/JiaoKM">GitHub</a>
 <!--                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp -->
 <!--                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a>  --><!-- &nbsp/&nbsp -->
