--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <name>Keming Jiao 「焦柯鸣」</name>
               </p>
               <p>
-                I'm looking for summer internship opportunities in 2025!
+                I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!
               </p>
               <p>I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
               </p>
@@ -84,7 +84,8 @@
                 <br>
                 <b>Keming Jiao</b>, Xincheng Yao, Lu Wang, Baozhu Zhang, Zhenyu Liu, Chongyang Zhang. <i>the 7th Chinese Conference on Pattern Recognition and Computer Vision (PRCV) (Accepted), 2024, Urumqi, China</i>
                 <br>
-                <a href="https://github.com/JiaoKM/GPD_dataset">Dataset</a>
+                <a href="https://github.com/JiaoKM/GPD_dataset">Dataset</a> &nbsp/&nbsp
+                <a href="paper/AMFS.pdf">Paper</a>
               </br>
             </td>
           </tr>
@@ -241,7 +242,7 @@
                     <br>
                     <br>
                     </p><div style="float:left;">
-                        Updated at Aug. 2024
+                        Updated at Nov. 2024
                     </div>
                     <div style="float:right;">
                         Thanks <a href="https://jonbarron.info">Jon Barron</a> for sharing this marvelous template. Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>.
