--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <name>Keming Jiao 「焦柯鸣」</name>
               </p>
               <p>
-                I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!
+                <b>I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!</b>
               </p>
               <p>I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
               </p>
