--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Yuliang Xiu 修宇亮</title>
+    <title>Keming Jiao 焦柯鸣</title>
     <link href="./style.css" rel="stylesheet" media="all" type="text/css" />
     <link
       rel="stylesheet"
@@ -2412,7 +2412,7 @@
           </li>
         </ul>
         <div align="center">
-          <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM"></script>
+          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
           <strong
             >This page is last updated at Nov. 2024. Thanks <a
             href="https://xiuyuliang.cn/"
